empty-feed: text alignment of empty conversation/feed message fixed. Fixes: #6150

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -2318,19 +2318,11 @@ button.topic_edit_cancel {
 .empty_feed_notice {
     padding: 3em 4em;
     display: none;
-}
-
-.empty_feed_notice h4 {
     text-align: center;
 }
 
 .notification {
     cursor: pointer;
-}
-
-#empty_narrow_private_message p,
-#empty_narrow_message p {
-    text-align: center;
 }
 
 .message-fade,
